Fixed z-index issue on bottom

--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,7 @@ body {
   font-size: 20px;
   justify-content: center;
   align-items: center;
+  z-index: 15;
 }
 .img-wrapper {
   position: relative;
